[JSC] IPInt exception handlers should be tagged correctly https://bugs.webkit.org/show_bug.cgi?id=294580 rdar://149335739

Reviewed by Keith Miller.

When JITCage is enabled, they must be JIT code. So,

1. When JIT is enabled, we just wrap these handlers with JIT code as the
   same way to the other trampolines as well.
2. When JIT is not enabled, then we just grab a code pointer to these
   ops.

* Source/JavaScriptCore/assembler/JITOperationList.cpp:
(JSC::llintOperations):
* Source/JavaScriptCore/bytecode/BytecodeList.rb:
* Source/JavaScriptCore/llint/InPlaceInterpreter.asm:
* Source/JavaScriptCore/llint/InPlaceInterpreter.h:
* Source/JavaScriptCore/llint/LLIntThunks.cpp:
(JSC::LLInt::inPlaceInterpreterEntryThunk): Deleted.
(JSC::LLInt::inPlaceInterpreterSIMDEntryThunk): Deleted.
* Source/JavaScriptCore/llint/LLIntThunks.h:
* Source/JavaScriptCore/llint/LowLevelInterpreter.asm:
* Source/JavaScriptCore/wasm/WasmCallee.cpp:
(JSC::Wasm::IPIntCallee::IPIntCallee):

Canonical link: https://commits.webkit.org/296295@main