Source/JavaScriptCore/llint/LowLevelInterpreter.asm
@@ -2926,6 +2926,30 @@ op(ipint_function_prologue_simd, macro ()
     crash()
 end)
 
+op(ipint_catch_entry, macro()
+    crash()
+end)
+
+op(ipint_catch_all_entry, macro()
+    crash()
+end)
+
+op(ipint_table_catch_entry, macro()
+    crash()
+end)
+
+op(ipint_table_catch_ref_entry, macro()
+    crash()
+end)
+
+op(ipint_table_catch_all_entry, macro()
+    crash()
+end)
+
+op(ipint_table_catch_allref_entry, macro()
+    crash()
+end)
+
 _wasm_trampoline_wasm_call:
 _wasm_trampoline_wasm_call_indirect:
 _wasm_trampoline_wasm_call_ref:
